Fix layout overlap

--- a/src/assets/css/one-lines.scss
+++ b/src/assets/css/one-lines.scss
@@ -46,3 +46,11 @@
 .lh-initial {
    line-height: initial;
 }
+
+.top-n42px {
+   top: -42px;
+}
+
+.h-0 {
+   height: 0;
+}
